--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <h1 style="text-align: center;">Register YourSelf</h1><br>
+    <div class="bg-image"></div>
+
+
     <div class="userDetail">
-        <h3>Enter Details</h3><br>
-       
-        <input type="text" placeholder="Name" id="name" ><br><br>
-        <input type="email" placeholder="Email" id="email"><br><br>
-        <input type="password" placeholder="Password" id="pass"><br><br>
-        <button type="submit" onclick="submit()">Submit</button>
+        <h1 style="text-align: center;color: yellow;">Register YourSelf</h1><br>
+        <div class="user"">
+            <h3><u>Enter Details</u></h3><br>
+
+            <input type="text" placeholder="Name" id="name"><br><br>
+            <input type="email" placeholder="Email" id="email"><br><br>
+            <input type="password" placeholder="Password" id="pass"><br><br>
+            <button type="submit" onclick="submit()">Submit</button>
+        </div>
     </div>
+
     <script src="script.js"></script>
 </body>
+
 </html>
