--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="userDetail">
         <h1 style="text-align: center;color: yellow;">Register YourSelf</h1><br>
-        <div class="user"">
+        <div class="user">
             <h3><u>Enter Details</u></h3><br>
 
             <input type="text" placeholder="Name" id="name"><br><br>
